<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundmain">
    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <ImageButton
            android:id="@+id/imbbackchangeinfo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back"
            android:onClick="back"/>
        <TextView
            android:id="@+id/tv_change_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/name_change_info"
            android:textSize="40dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/textcolormain"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tvname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:selectAllOnFocus="true"
        android:singleLine="true" />



    <TextView
    android:id="@+id/tv_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Email"
    android:textSize="20dp"
    android:layout_margin="10dp"
    android:textStyle="bold"/>

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tv_passw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mật khẩu"
        android:textSize="20dp"
        android:layout_margin="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ed_passw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:hint="Nhập mật khẩu nếu bạn muốn thay đổi thông tin" />

    <TextView
        android:id="@+id/tv_notice_change_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/red"
        android:text=""
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_sm_change_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Thay đổi"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"/>
</LinearLayout>